kubernetes/apps/security/wazuh/app/talospatcher.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sysctl-modifier
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: sysctl-modifier
  template:
    metadata:
      labels:
        name: sysctl-modifier
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
      containers:
      - name: pause
        image: k8s.gcr.io/pause:3.10
